--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ ffmpeg-2.6.2
 FFmpegMainDemo.xcworkspace/xcuserdata
 FFmpeg-iOS
 Demo/FFmpegMainDemo/FFmpegMainDemo.xcodeproj/xcuserdata
+Demo/FFmpegMainDemo/FFmpegMainDemo.xcodeproj/project.xcworkspace/xcuserdata
+FFmpegMain.xcodeproj/project.xcworkspace/xcuserdata
+FFmpegMain.xcodeproj/xcuserdata
